// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree rendering render with props 1`] = `
<Col
  bsClass="col"
  componentClass="div"
  sm={9}
>
  <p>
    There are currently 
    3
     report files ready
  </p>
  <div
    className="reports_queue"
  >
    <div
      className="item"
      key="0"
    >
      <Icon
        name="download"
        onClick={[Function]}
        type="fa"
      />
      file1
    </div>
    <div
      className="item"
      key="1"
    >
      <Icon
        name="download"
        onClick={[Function]}
        type="fa"
      />
      file2
    </div>
    <div
      className="item"
      key="2"
    >
      <Icon
        name="download"
        onClick={[Function]}
        type="fa"
      />
      file3
    </div>
  </div>
</Col>
`;

exports[`Tree rendering render without Props 1`] = `
<Col
  bsClass="col"
  componentClass="div"
  sm={9}
>
  <p>
    There are currently 
    0
     report files ready
  </p>
  <div
    className="reports_queue"
  />
</Col>
`;
